k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spice-shop
  labels:
    app.kubernetes.io/name: spice-shop
    app.kubernetes.io/instance: spice-shop
    app.kubernetes.io/part-of: spice-shop
    environment: production
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
